--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
                 <input type="password" placeholder="Enter Password" name="password" required>       
             </div>   
         </form>   
-        <form action="desktop-13.html">
+        <form action="home.html">
             <button type="submit">Login</button>
         </form>  
     </div>
